Tries to fix most of the video related issues
Fixes [BUG] Cannot Zoom Into Picture #560
Fixes [BUG] videos don't play in the last two versions of the app #559
Fixes [Enhancement] Disable video auto play option #555
Fixes [BUG] Can play video from previous picture #530

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,6 +299,8 @@
     <string name="media_grid">Media Grid</string>
     <string name="classic_date">Classic Date</string>
     <string name="extended_date">Extended Date</string>
+    <string name="auto_play_video">Video Auto-Play</string>
+    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
