--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -312,6 +312,16 @@
     <string name="filters">Filters</string>
     <string name="markup">Markup</string>
     <string name="type_size">Size</string>
+    <string name="encrypting_media">Encrypting media...</string>
+    <string name="decrypt_vault">Decrypt Vault</string>
+    <string name="restore_vault_summary">The current vault and its content will be decrypted and restored.\nThis action will make your content accessible again in the Gallery.</string>
+    <string name="restore_vault_title">Confirm Decryption?</string>
+    <string name="yes">Yes</string>
+    <string name="vault_deletion_title">Confirm Deletion?</string>
+    <string name="vault_deletion_summary">The current vault and its content will be deleted permanently.\nThis action cannot be undone.</string>
+    <string name="create_new_vault_title">Create new vault?</string>
+    <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="select_a_vault">Select a vault</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
