New Crowdin updates (#551)
* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Russian)

* New translations strings.xml (Spanish)

* New translations strings.xml (Spanish)

* New translations strings.xml (Japanese)

* New translations strings.xml (Arabic)

* New translations strings.xml (Italian)

* New translations strings.xml (Italian)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Irish)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Punjabi)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Bengali)

* New translations strings.xml (Croatian)

* New translations strings.xml (Hindi)

* New translations strings.xml (Nepali)

* New translations strings.xml (Catalan)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Dutch)

* New translations strings.xml (French)

* New translations strings.xml (French)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Czech)

* New translations strings.xml (Czech)

* New translations strings.xml (German)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Russian)

* New translations strings.xml (German)

* New translations strings.xml (Polish)

* New translations strings.xml (Polish)

* New translations strings.xml (Danish)

* New translations strings.xml (Japanese)

* New translations strings.xml (Arabic)

* New translations strings.xml (Turkish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Arabic)

* New translations strings.xml (Arabic)

* New translations strings.xml 

--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -305,8 +305,7 @@
     <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
-        <item quantity="two">%s items</item>
-        <item quantity="many">%s items</item>
+        <item quantity="few">%s items</item>
         <item quantity="other">%s items</item>
     </plurals>
 </resources>
