--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Галерея</string>
     <string name="nav_albums">Альбомы</string>
-    <string name="searchbar_title"><![CDATA[Поиск фотографий и видео]]></string>
+    <string name="searchbar_title"><![CDATA[Поиск фото и видео]]></string>
     <string name="header_today">Сегодня</string>
     <string name="header_yesterday">Вчера</string>
     <string name="request_permissions">Запрос разрешений</string>
@@ -13,7 +13,7 @@
     <string name="filter_old">Старые</string>
     <string name="selected_s">Выбрано %s</string>
     <string name="trash">Корзина</string>
-    <string name="pause_video">Поставить на паузу</string>
+    <string name="pause_video">Пауза</string>
     <string name="play_video">Воспроизвести</string>
     <string name="favorites">Избранное</string>
     <string name="no_media_title">Похоже, здесь пусто</string>
@@ -44,13 +44,13 @@
     <string name="settings_title">Настройки</string>
     <string name="settings_general">Основные</string>
     <string name="settings_trash_title">Использовать корзину</string>
-    <string name="settings_trash_summary">Хранить удалённые медиафайлы 30 дней.\nЕсли отключить, медиафайлы будут удаляться навсегда.</string>
+    <string name="settings_trash_summary">Хранить удалённые медиафайлы 30 дней в корзине.\nЕсли отключить, медиафайлы будут удаляться сразу навсегда.</string>
     <string name="move_album_to_trash">Отправить альбом в корзину</string>
     <string name="pinned_albums_title">Закреплённые альбомы</string>
     <string name="unpin">Открепить</string>
     <string name="pin">Закрепить</string>
     <string name="nav_timeline">Хронология</string>
-    <string name="location_cd">Местоположение медиафайла</string>
+    <string name="location_cd">Расположение медиа</string>
     <string name="location_map_cd">Карта</string>
     <string name="app_dev">от %s</string>
     <string name="app_dev_name">IacobIonut01</string>
@@ -126,7 +126,7 @@
     <string name="move_to_another_album">Переместить в другой альбом</string>
     <string name="move">Переместить</string>
     <string name="some_permissions_are_not_granted">Некоторые разрешения не предоставлены!</string>
-    <string name="get_started">Начало</string>
+    <string name="get_started">Начать</string>
     <string name="welcome">Добро пожаловать</string>
     <string name="setup_summary">Для доступа к вашим медиафайлам необходимо предоставить следующие разрешения:</string>
     <string name="required">Необходимое</string>
@@ -159,7 +159,7 @@
     <string name="add_to_ignored_summary">Убрать альбом из отображения в Галерее</string>
     <string name="remove_from_ignored">Удалить из списка игнорируемых</string>
     <string name="remove_from_ignored_summary">Удалите из списка игнорируемых альбом с названием %1$s</string>
-    <string name="override">Переопределение</string>
+    <string name="override">Заменить</string>
     <string name="save_copy">Сохранить копию</string>
     <string name="favorite">В избранное</string>
     <string name="allow_to_manage_media">Разрешить управлять медиафайлами</string>
@@ -255,7 +255,7 @@
     <string name="vault_setup_name">Название сейфа</string>
     <string name="vault_setup_security_error">Перед настройкой сейфа установите меры безопасности на телефоне.</string>
     <string name="vault_setup_summary">Доступ к сейфу будет осуществляться с помощью мер безопасности вашего телефона (пароль или биометрические данные)\n\nКлюч шифрования может быть доступен внутри хранилища и будет использоваться для восстановления других хранилищ.</string>
-    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
+    <string name="vault_setup_summary2">Доступ к хранилищу осуществляется с помощью мер безопасности вашего телефона (пароль или биометрические данные)\n\nСодержимое хранилища зашифровано с помощью алгоритма шифрования AES256.\nДоступ к ключу шифрования внутри хранилища невозможен, и вы не сможете передать хранилище.</string>
     <string name="vault_already_exists">Сейф \"%1$s\" уже существует</string>
     <string name="ignored">Игнорированное</string>
     <string name="location">Путь</string>
@@ -271,26 +271,42 @@
     <string name="up_to_date">Актуально</string>
     <string name="delete_location">Удалить локацию</string>
     <string name="delete_metadata">Удалить Метаданные</string>
-    <string name="categorise_your_media">Categorise your media</string>
-    <string name="disclaimer">Disclaimer</string>
-    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
-    <string name="delete_all_categories">Delete all categories</string>
-    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
-    <string name="ai_category">Smart Features</string>
-    <string name="no_classification">Disable image classification</string>
-    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
-    <string name="classification_unwanted">I don\'t want this</string>
-    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
-    <string name="restore">Restore</string>
-    <string name="encrypted">Encrypted</string>
-    <string name="date_format_settings">Date Format</string>
-    <string name="date_header">Date Formats</string>
-    <string name="date_header_summary">Set your own custom date formats</string>
-    <string name="launch_on_library">Launch on Library</string>
+    <string name="categorise_your_media">Категоризируйте медиа</string>
+    <string name="disclaimer">Дисклеймер</string>
+    <string name="disclaimer_classification">Ваши медиафайлы не загружаются на сервер, вся классификация выполняется локально на вашем устройстве с помощью TensorFlow-Lite с предварительно обученной моделью, доступной в исходном коде приложения.</string>
+    <string name="delete_all_categories">Удалить все категории</string>
+    <string name="delete_all_categories_summary">Это приведет к удалению всех категорий найденных в ваших медиафайлах, и это действие необратимо. Вам придется заново просканировать медиафайлы, чтобы переклассифицировать их.</string>
+    <string name="ai_category">Умные функции</string>
+    <string name="no_classification">Отключить классификацию изображений</string>
+    <string name="no_classification_summary">Включение этой функции удалит все интерфейсы, касающиеся классификации изображений или управления ею. Это НЕ приведет к удалению базы данных классифицированных изображений</string>
+    <string name="classification_unwanted">Я не хочу это</string>
+    <string name="classification_unwanted_summary">Я не хочу это, уберите это.\n(Может быть включено опять в настройках)</string>
+    <string name="restore">Восстановить</string>
+    <string name="encrypted">Зашифровано</string>
+    <string name="date_format_settings">Формат времени</string>
+    <string name="date_header">Форматы дат</string>
+    <string name="date_header_summary">Установите свои форматы дат</string>
+    <string name="launch_on_library">Запуск библиотеки</string>
+    <string name="categories">Категории</string>
+    <string name="classified_media">%1$s классифицированных медиа</string>
+    <string name="scan_for_new_categories">Сканировать новые категории</string>
+    <string name="scanning_media">Сканирование медиа...</string>
+    <string name="date_header_title">Заголовок даты</string>
+    <string name="media_view">Просмотр медиа</string>
+    <string name="exif_date">Exif-данные</string>
+    <string name="media_info">Информация о медиа</string>
+    <string name="weekly_date">Еженедельная дата</string>
+    <string name="media_grid">Медиа сетка</string>
+    <string name="classic_date">Классическая дата</string>
+    <string name="extended_date">Полная дата</string>
+    <string name="auto_play_video">Автовоспроизведение видео</string>
+    <string name="auto_play_video_summary">Воспроизводить видео автоматически при просмотра медиа</string>
+    <string name="shared_elements">Анимированные медиа элементы</string>
+    <string name="shared_elements_summary">Анимируйте нажатие / возврат медиа элементов с помощью общих элементов перехода</string>
     <plurals name="item_count">
-        <item quantity="one">%s пункт</item>
-        <item quantity="few">%s пунктов</item>
-        <item quantity="many">%s пунктов</item>
+        <item quantity="one">%s элемент</item>
+        <item quantity="few">%s эл.</item>
+        <item quantity="many">%s эл.</item>
         <item quantity="other">%s эл.</item>
     </plurals>
 </resources>
