--- a/app/src/main/res/values-ga-rIE/strings.xml
+++ b/app/src/main/res/values-ga-rIE/strings.xml
@@ -306,6 +306,7 @@
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="two">%s items</item>
+        <item quantity="few">%s items</item>
         <item quantity="many">%s items</item>
         <item quantity="other">%s items</item>
     </plurals>
